--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -2,11 +2,12 @@
 layout: default
 modal-id: 4
 date: 2014-07-15
-img: game.png
+title: Account wise report
+img: game.jpg
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
-description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
+description: ExpenseTrkr application generates Account wise report as shown above. Make sure that you select or add Account while adding an expense. If you have not set the account, in this report you will see those under No Account. You can always select and edit transaction to apply account to it.
 
 ---
